@@ -6,9 +6,9 @@ DurexForth features a simple but useful 6510 assembler with support for branches
 
 \begin{verbatim}
 code flash
-here ( push current addr )
-d020 inc, ( inc $d020 )
-jmp, ( jump to pushed addr )
+here        ( push current addr )
+d020 inc,   ( inc $d020 )
+jmp,        ( jump to pushed addr )
 ;code
 \end{verbatim}
 
@@ -16,6 +16,33 @@ It is also possible to inline assembly code into a regular Forth word, as seen i
 
 \begin{verbatim}
 : flash begin [ d020 inc, ] again ;
+\end{verbatim}
+
+\section{Variables}
+
+DurexForth has a few variables that are specifically meant to be used within code words.
+
+\begin{description}
+    \item[lsb ( -- addr )] Points to the top of the LSB parameter stack. Together with the \texttt{x} register, it can be used to access stack contents.
+    \item[msb ( -- addr )] Points to the top of the MSB parameter stack. Together with the \texttt{x} register, it can be used to access stack contents.
+    \item[w ( -- addr )] A zero-page cell that code words may use freely as work area.
+    \item[w2 ( -- addr )] Second zero-page work area cell.
+    \item[w3 ( -- addr )] Third zero-page work area cell.
+\end{description}
+
+Example usage of \texttt{lsb} and \texttt{msb}:
+
+\begin{verbatim}
+code + ( n1 n2 -- sum )
+clc,           ( clear carry )
+lsb 1+ lda,x   ( load n1 lsb )
+lsb adc,x      ( add n2 lsb )
+lsb 1+ sta,x   ( store to n1 lsb )
+msb 1+ lda,x   ( load n1 msb )
+msb adc,x      ( add n2 msb )
+msb 1+ sta,x   ( store to n2 msb )
+inx,           ( drop n2; n1 = sum )
+;code
 \end{verbatim}
 
 \section{Branches}
@@ -62,154 +89,3 @@ code checkers
 600 sta,y 700 sta,y
 dey, 'l' @@ bne, ;code
 \end{verbatim}
-
-\section{Assembler Mnemonics}
-\begin{multicols}{5}{
-\begin{verbatim}
-adc,#
-adc,
-adc,x
-adc,y
-adc,(x)
-adc,(y)
-
-and,#
-and,
-and,x
-and,y
-and,(x)
-and,(y)
-
-asl,a
-asl,
-asl,x
-
-bcc,
-bcs,
-beq,
-bmi,
-bne,
-bpl,
-bvc,
-bvs,
-
-bit,
-brk,
-clc,
-cld,
-cli,
-clv,
-
-cmp,#
-cmp,
-cmp,x
-cmp,y
-cmp,(x)
-cmp,(y)
-
-cpx,#
-cpx,
-
-cpy,#
-cpy,
-
-dec,
-dec,x
-
-dex,
-dey,
-
-eor,#
-eor,
-eor,x
-eor,y
-eor,(x)
-eor,(y)
-
-inc,
-inc,x
-
-inx,
-iny,
-
-jmp,
-(jmp),
-
-jsr,
-
-lda,#
-lda,
-lda,x
-lda,y
-lda,(x)
-lda,(y)
-
-ldx,#
-ldx,
-ldx,y
-
-ldy,#
-ldy,
-ldy,x
-
-lsr,a
-lsr,
-lsr,x
-
-nop,
-
-ora,#
-ora,
-ora,x
-ora,y
-ora,(x)
-ora,(y)
-
-pha,
-php,
-pla,
-plp,
-
-rol,a
-rol,
-rol,x
-
-ror,a
-ror,
-ror,x
-
-rti,
-rts,
-
-sbc,#
-sbc,
-sbc,x
-sbc,y
-sbc,(x)
-sbc,(y)
-
-sec,
-sed,
-sei,
-
-sta,
-sta,x
-sta,y
-sta,(x)
-sta,(y)
-
-stx,
-stx,y
-
-sty,
-sty,x
-
-tax,
-tay,
-tsx,
-txa,
-txs,
-tya,
-\end{verbatim}
-}
-\end{multicols}
