@@ -76,13 +76,8 @@ Copy value from top of return stack to top of parameter stack.
 
 \texttt{n} is the number of single-cell values contained in the data stack before \texttt{n} was placed on the stack.
 
-\item[sp0 ( -- addr)] 
-
-The bottom address of the LSB section of the parameter stack.
-
-\item[sp1 ( -- addr)] 
-
-The bottom address of the MSB section of the parameter stack.
+\item[lsb ( -- addr)] The top address of the LSB parameter stack.
+\item[msb ( -- addr)] The top address of the MSB parameter stack.
 
 \end{description}
 
