@@ -30,6 +30,7 @@
 \input{mml.tex}
 \input{asm.tex}
 \appendix
+\input{mnemonics.tex}
 \input{memmap.tex}
 \input{anatomy.tex}
 
