@@ -3,7 +3,7 @@
 30c value ar 30d value xr
 30e value yr 30f value sr
 code sys ( addr -- )
-sp0 lda,x 14 sta, sp1 lda,x 15 sta,
+lsb lda,x 14 sta, msb lda,x 15 sta,
 txa, pha,
 e130 jsr, \ perform [sys]
 pla, tax, inx, ;code
