@@ -293,4 +293,6 @@ Thanks to polluks for suggestions!
 
 v1.5.5
 
- * renamed zptmp zptmp2 zptmp3 => w w2 w3
+ * asm: renamed zptmp zptmp2 zptmp3 => w w2 w3
+ * asm: renamed sp0 sp1 => lsb msb
+ * doc: expanded assembler documentation
